# manual-ade

./: .gitignore  AGENTS.md  Dockerfile  README.md  abrir_maestro.command  pyproject.toml
.github/workflows/: pages.yml
agents/: 00_maestro.md  01_estadistica_metodologia.md  02_didactica_visualizacion.md  03_lenguaje_academico.md  04_estilo_roman.md  05_editorial_produccion.md  06_revisor_cientifico_editorial.md
artifacts/hag/: brechas_ecosistema.md  contrato_api.md  guia_jerarquia_editorial.md  mapa_aprendizaje.md  plan_visual.md  revision_cientifica.md
config/: hag.json
docs/: arquitectura_hag.md  autores_proyecto.md  filosofia_construccion_manual.md  indice_didactico_ade.md  mandato_comun_agentes.md  mision_proyecto.md  sistema_autoadaptable_base_notas.md
docs/libro_latex/: 00Notas.tex  aleph-notas.cls  (+1 more)
hag/: __init__.py  agents.py  api.py  audit.py  cli.py  director.py  extraction.py  generators.py  knowledge_base.py  models.py  presentation_integration.py
knowledge/: presentation_integration.json
practicas/: anova-de-un-factor-comparar-grupos-con-evidencia.md  diseno-factorial-2x2-sustancias-e-interacciones-visuales.md  manova-multiples-respuestas-en-rendimiento-termico.md  nombre-de-la-practica.md  plantilla_practica.md  taguchi-l4-violeta-africana-y-sistemas-biologicos-confinados.md
scripts/: auditar_publicacion.py  compilar_materiales.py  generar_libro_pdf.py  hag.py  hag_api.py  instalar_hag.sh  investigar_material.py  maestro.py  maestro_bloqueado.py  maestro_timeout.py  servir_pagina.py
site/: chatbot_kb.json  index.html
tests/: test_hag.py
(+85 files in other folders)
